<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">iShangke</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="day_mon">一</string>
    <string name="day_Tue">二</string>
    <string name="day_Wed">三</string>
    <string name="day_Thu">四</string>
    <string name="day_Fri">五</string>
    <string name="day_Sat">六</string>
    <string name="day_Sun">日</string>
    
    <string name="dpt_all">所有开课学院</string>
    <string name="dpt_0">0-人文学院</string>
    <string name="dpt_1">1-外语系</string>
    <string name="dpt_2">2-数学科学学院</string>
    <string name="dpt_3">3-物理科学学院</string>
    <string name="dpt_4">4-化学与化学工程学院</string>
    <string name="dpt_5">5-生命科学学院</string>
    <string name="dpt_6">6-地球科学学院</string>
    <string name="dpt_7">7-计算机与控制工程学院</string>
    <string name="dpt_8">8-资源与环境学院</string>
    <string name="dpt_9">9-管理学院</string>
    <string name="dpt_T">T-体育教研室</string>
    <string name="dpt_E">E-电子与通信工程学院</string>
    <string name="dpt_G">G-工程管理与信息技术学院</string>
    <string name="dpt_M">M-材料科学与光电学院</string>
    <string name="dpt_C">C-继续教育学院</string>
    
    <string name="search_title">搜索课程</string>
    <string name="search_init">请输入课程名称</string>
    <string name="search_go">搜索</string>
    <string name="search_result">搜索结果</string>
    <string name="serach_condition_default">搜索条件：所有校区，所有学院，任意课程类型，任意授课方式，任意考试方式，学分任意</string>
    
    <string name="campus_Y">玉泉路</string>
    <string name="campus_Z">中关村</string>
    <string name="campus_H">雁栖湖</string>
    
    <string name="credit">学分满足：</string>
    
    <string name="conflict">不显示与已选课程冲突的课程</string>
    
    <string name="add_course">添加</string>
    <string name="delete_course">删除</string>
    
    <string name="more_options">高级搜索</string>
    <string name="sertch_go">搜索</string>
    
    
    <string name="detail_ttl">课程详情</string>
    <string name="detail_ttl_name">课程名称</string>
    <string name="detail_ttl_teacher">授课教师</string>
    <string name="detail_ttl_type">课程类型</string>
    <string name="detail_ttl_period">课程课时</string>
    <string name="detail_ttl_credit">课程学分</string>
    <string name="detail_ttl_time">时间地点</string>
    <string name="detail_ttl_teachingway">授课方法</string>
    <string name="detail_ttl_examingway">考试方法</string>
    <string name="detail_ttl_deleteCourse">删除课程</string>
    <string name="detail_ttl_department">开课院系</string>
    <string name="detail_ttl_campus">所属校区</string>
    
	<string name="download_txtv_declare">郑重承诺：我们绝不会以任何形式保存您的登陆信息</string>
	<string name="download_txtv_warning1">提示1：导入已选课程将首先清空本地课表，如果您希望在课程表中呈现未选课程，请导入后重新添加</string>
	<string name="download_txtv_warning2">提示2：个别跨学期课程（如马克思主义与当代）由于技术原因暂时不存在于我们的数据库中，因此如果您发现有的课程搜索不到无法添加到课程表中，请别忘了上课时间</string>
	<string name="download_ttl">导入已选课程</string>
	

</resources>
