<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f0f0f0"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/bkg_detail_info"
        android:orientation="vertical"
        android:padding="3dp" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left|center_vertical"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/imgv_detail_name"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:maxHeight="30dp"
                android:maxWidth="30dp"
                android:padding="3dp"
                android:src="@drawable/ttl_book" />

            <TextView
                android:id="@+id/tv_detail_ttl_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:text="@string/detail_ttl_name"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/tv_detail_cntnt_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="Small Text"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left|center_vertical"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/imgv_detail_campus"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:maxHeight="30dp"
                android:maxWidth="30dp"
                android:padding="3dp"
                android:src="@drawable/ttl_campus" />

            <TextView
                android:id="@+id/tv_detail_ttl_campus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:text="@string/detail_ttl_campus"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/tv_detail_cntnt_campus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="Small Text"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left|center_vertical"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/imgv_detail_teacher"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:maxHeight="30dp"
                android:maxWidth="30dp"
                android:padding="3dp"
                android:src="@drawable/ttl_teacher" />

            <TextView
                android:id="@+id/tv_detail_ttl_teacher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:text="@string/detail_ttl_teacher"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/tv_detail_cntnt_teacher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="Small Text"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left|center_vertical"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/imgv_detail_department"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:maxHeight="30dp"
                android:maxWidth="30dp"
                android:padding="3dp"
                android:src="@drawable/ttl_department" />

            <TextView
                android:id="@+id/tv_detail_ttl_department"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:text="@string/detail_ttl_department"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/tv_detail_cntnt_department"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="Small Text"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left|center_vertical"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/imgv_detail_type"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:maxHeight="30dp"
                android:maxWidth="30dp"
                android:padding="3dp"
                android:src="@drawable/ttl_category" />

            <TextView
                android:id="@+id/tv_detail_ttl_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:text="@string/detail_ttl_type"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/tv_detail_cntnt_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="Small Text"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left|center_vertical"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/imgv_detail_period"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:maxHeight="30dp"
                android:maxWidth="30dp"
                android:padding="3dp"
                android:src="@drawable/ttl_period" />

            <TextView
                android:id="@+id/tv_detail_ttl_period"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:text="@string/detail_ttl_period"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/tv_detail_cntnt_period"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="Small Text"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left|center_vertical"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/imgv_detail_credit"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:maxHeight="30dp"
                android:maxWidth="30dp"
                android:padding="3dp"
                android:src="@drawable/ttl_teachingway" />

            <TextView
                android:id="@+id/tv_detail_ttl_credit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:text="@string/detail_ttl_credit"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/tv_detail_cntnt_credit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="Small Text"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left|center_vertical"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/imgv_detail_time"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:maxHeight="30dp"
                android:maxWidth="30dp"
                android:padding="3dp"
                android:src="@drawable/ttl_time" />

            <TextView
                android:id="@+id/tv_detail_ttl_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:text="@string/detail_ttl_time"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/tv_detail_cntnt_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="Small Text"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left|center_vertical"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/imgv_detail_teachingWay"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:maxHeight="30dp"
                android:maxWidth="30dp"
                android:padding="3dp"
                android:src="@drawable/ttl_teaching_ways" />

            <TextView
                android:id="@+id/tv_detail_ttl_teachingWay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:text="@string/detail_ttl_teachingway"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/tv_detail_cntnt_teachingWay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="Small Text"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left|center_vertical"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/imgv_detail_examingWay"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:maxHeight="30dp"
                android:maxWidth="30dp"
                android:padding="3dp"
                android:src="@drawable/ttl_exam" />

            <TextView
                android:id="@+id/tv_detail_ttl_examingWay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:text="@string/detail_ttl_examingway"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/tv_detail_cntnt_examingWay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="Small Text"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>